--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    
 
     <title>React App</title>
   </head>
